css/main.css
/***** BASE STYLES *****/

body	{
	font-family: 'Abel', sans-serif;
	background-color: #122336;
}


/***** HEADER *****/

.header {
	 	margin: 30px;
  	font-size: 30px;
  	font-weight: normal;
  	text-align: center;
  	clear: all;
  }

nav {
    text-align: center;
}

nav ul li{
    display: inline-block;
    padding: 50px 25px;
    margin: 100px;
}

nav ul li a {
    font-size: 30px;
    color: #ffffff;
    text-decoration: none;
}


/***** INTRO *****/

.intro  {
    margin: 30px;
    font-size: 60px;
    color: #ffffff;
    line-height: all;
    margin: 30px;
    padding: 30px;
    text-align: center;
    clear: all;
}

/***** ABOUT *****/

.about	{
	font-size: 30px;
	color: #ffffff;
  font-weight: normal;
  text-align: center;
  clear: all;

}

.about img {
  width: 250px;
}



/***** PORTFOLIO *****/

.work {
  margin-top: 150px;
  color: #ffffff;
  font-size: 30px;
  text-align: center;
}

.distracted h3, p	{
	color: #ffffff;
	text-align: center;
	font-size: 25px;
}

.jubilee h3, p {
  color: #ffffff;
  text-align: center;
  font-size: 25px;
}

.rogue h3, p {
  color: #ffffff;
  text-align: center;
  font-size: 25px;
}

.jubilee img {
  width: 500px;
  margin: 0 auto;
}

.distracted img {
  width: 500px;
  margin: 0 auto;
}

.rogue img {
  width: 500px;
  margin: 0 auto;
}


/***** CONTACT *****/

.contact {
   	margin: 20px;
    text-align: center;
  	clear: all;

}

/***** FOOTER *****/

.footer {
	text-align: center;
	color: #ffffff;

}

